--- a/css/site.css
+++ b/css/site.css
@@ -1,9 +1,8 @@
 body, html {
-    width:100%;
-    height:100%;
     font-family: 'NeueHaasRoman';
     background: #A21212;
     color: #FFFFFF;
+    overflow: hidden;
 }
 #cover {
     background: #A21212;
