--- a/css/site.css
+++ b/css/site.css
@@ -1,10 +1,15 @@
-body, html {
+body, html {/*
     width:100%;
-    height:100%;
+    height:100%;*/
     font-family: 'NeueHaasRoman';
     background: #A21212;
     color: #FFFFFF;
     overflow: hidden;
+}
+body {
+    top:0;
+    left:0;
+    position: fixed;
 }
 #cover {
     background: #A21212;
@@ -107,6 +112,8 @@ canvas {
 }
 #anim_cover {
 }
-
+#grid {
+    overflow: hidden;
+}
 
 
