--- a/common/campAR/src/index.sass
+++ b/common/campAR/src/index.sass
@@ -1,3 +1,8 @@
+* {
+  user-select: none;
+  -webkit-user-select: none; 
+}
+
 html,
 body {
   margin: 0;
@@ -9,23 +14,19 @@ canvas {
     width: 100%;
     height: 100%;
 }
-#tap-to-place {
+.button {
     position: fixed;
-    bottom: 20px;
-    left: 50%;
-    right: 0px;
+    top: 10px;
+    right: 10px;
     border-radius: 15px;
-    background: black;
-    color: white;
-    width: 200px;
-    margin-left: -100px;
+    font-size: 12px;
+    background: white;
+    color: black;
     text-align: center;
     padding: 15px;
-    box-sizing: border-box;
     font-family: sans-serif;
     text-transform: uppercase;
     z-index: 6;
-    user-select: none;
 }
 .hidden {
   display: none;
@@ -36,6 +37,9 @@ canvas {
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: transparent;
+  touch-action: none;
+  pointer-events: auto;
 }
 #scene-explorer-host, #inspector-host {
   z-index: 100;
