--- a/common/campAR/src/index.sass
+++ b/common/campAR/src/index.sass
@@ -17,7 +17,8 @@ canvas {
 .button {
     position: fixed;
     top: 10px;
-    right: 10px;
+    left: 50%;
+    transform: translate(-50%);
     border-radius: 15px;
     font-size: 12px;
     background: white;
@@ -27,6 +28,7 @@ canvas {
     font-family: sans-serif;
     text-transform: uppercase;
     z-index: 6;
+
 }
 .hidden {
   display: none;
