--- a/common/recursive.gallery/recursive-bits/exhibition-cover/style.css
+++ b/common/recursive.gallery/recursive-bits/exhibition-cover/style.css
@@ -9,6 +9,13 @@ body {
   font-family: 'Roboto' !important;
   color: white;
   font-size: 9px;
+
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 #magic {
