--- a/common/recursive.gallery/recursive-bits/header/main.css
+++ b/common/recursive.gallery/recursive-bits/header/main.css
@@ -5,6 +5,13 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 ::selection {
