--- a/common/recursive.gallery/recursive-bits/artwork-1/style.css
+++ b/common/recursive.gallery/recursive-bits/artwork-1/style.css
@@ -4,7 +4,9 @@ html {
   padding: 0;
   overflow: hidden;
   background-color: #000;
+}
 
+* {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
