--- a/common/recursive.gallery/recursive-bits/exhibition-cover-2/style.css
+++ b/common/recursive.gallery/recursive-bits/exhibition-cover-2/style.css
@@ -5,6 +5,9 @@ html {
   padding: 0;
   background-color: #1E1C26;
 
+}
+
+* {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
