--- a/common/recursive.gallery/recursive-bits/header/main.css
+++ b/common/recursive.gallery/recursive-bits/header/main.css
@@ -5,7 +5,9 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  
+}
+
+* {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -13,6 +15,7 @@ body {
   -ms-user-select: none;
   user-select: none;
 }
+
 
 ::selection {
   color: black;
